added product profile component, pagination fail

--- a/src/components/Marketplace/PublicList/PublicList.module.scss
+++ b/src/components/Marketplace/PublicList/PublicList.module.scss
@@ -13,7 +13,17 @@
         justify-content: space-evenly;
         background-color: gray;
         // flex-direction: row;   
-        // align-items: center;     
+        // align-items: center;    
+
+        // .bagel {
+        //     display: contents;
+        // }
+        
+        .proProfile {
+            // display: none;
+            height: 1px;
+
+        }
 
         .loader {
             border: 2px solid blue;
