--- a/src/components/Home/HomeBanner/HomeBanner.module.scss
+++ b/src/components/Home/HomeBanner/HomeBanner.module.scss
@@ -1,25 +1,30 @@
+@import "../../../static/variables";
+
 .bannerContain {
-    border: 2px solid red;
+    // border: 2px solid red;
     display: flex;
     justify-content: flex-end;
+    font-family: $font-stack2;
     
     div:nth-child(1) {
-        border: 2px solid purple;
+        // border: 2px solid purple;
         width: 20%;
-        height: 200px;
+        height: 100px;
         display: flex;
         align-items: center;
         text-align: right;
         margin-right: 10px;
+        
 
     }
     
     div:nth-child(2) {
-        border: 2px solid purple;
-        width: 70%;
-        height: 200px;
-        background-color: #141414;
+        // border: 2px solid purple;
+        width: 65%;
+        height: 100px;
+        background-color: lightcoral;
         color: white;
+        border-bottom-right-radius: 200px;
     }
 
 }
