--- a/src/components/Marketplace/Marketplace.module.scss
+++ b/src/components/Marketplace/Marketplace.module.scss
@@ -1,12 +1,75 @@
 @import "../../static/variables";
 
 .marketplaceContain {
-    border: 2px solid blue;
-    background-color: red;
+    // //border: 2px solid blue;
+    // background-color: red;
     height: 200%;
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    color: pink;
+    padding: 10px;
+
+    .header {
+        // //border: 2px solid blue;
+        font-family: $font-stack1;
+        text-transform: uppercase;
+        font-size: $heading1-size;
+    }
+    
+    .signUpContain {
+        // border: 2px solid red;
+        width: 100%;
+        height: 250px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        font-family: $font-stack1;
+        font-size: 20px;
+        margin: $global-margin + 50 0;
+        // background-color: bisque;
+
+        .innerSign {
+            border-left: 0.5px solid darkgrey;
+            width: 50%;
+            height: 100%;
+            //border: 2px solid black;
+            background-color: lightgray;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            transition: 0.3s;
+            font-weight: 400;
+
+            &:hover {
+                border-left: 18px solid rosybrown;
+                transition: 0.3s;
+            }
+            
+
+            .button {
+                
+                button {
+                    height: 30px;
+                    width: 200px;
+                    border-radius: 20px;
+                    border-style: none;
+                    transition: 1s;
+                    font-family: $font-stack1;
+                    font-size: 14px;
+                    
+
+                    &:hover {
+                        background-color: darkgray;
+                        // background-color: #4aaaff;
+                        transition: 1s;
+                        color: white;
+                        cursor: pointer;
+                        
+                    }
+                }
+            }
+        }
+    }
 }
