--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -1,8 +1,35 @@
 @import "../../static/variables";
 
 .galleryContain {
-    background-color: yellow;
-    border: 2px solid red;
+    // background-color: yellow;
+    // border: 2px solid red;
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: $global-margin + 100 0;
+
+    .innerContain {
+           background-color: rgba(0,0,0, 0.9);
+           height: 600px;
+           width: 600px;
+           display: flex;
+           justify-content: center;
+           align-items: center;
+           border-radius: 50%;
+           transition: 0.5s;
+           
+           &:hover {
+            box-shadow: 0px 0px 40px aqua;
+            transition: 0.5s;
+            
+           }
+
+           p {
+               font-size: 120px;
+               text-align: center;
+               color: white;
+           }
+    }
 }
