--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -7,6 +7,7 @@
     background-color: aliceblue;
     display: flex;
     flex-direction: column;
+    padding-top: $global-margin;
 
     .introContain {
         display: flex;
@@ -107,7 +108,7 @@
     }
 
     .midBanner {
-        border: 2px solid red;
+        // border: 2px solid red;
         height: 100px;
         // width: 2000px;
         left: 0;
