--- a/src/components/Marketplace/CurrentProduct/CurrentProduct.module.scss
+++ b/src/components/Marketplace/CurrentProduct/CurrentProduct.module.scss
@@ -1,8 +1,63 @@
+@import "../../../static/variables";
+
 .currentContain {
-    border: 2px solid blue;
-    width: 300px;
-    height: 300px;
-    margin: 40px 0;
+    // border: 2px solid blue;
+    width: 330px;
+    height: 450px;
+    margin: 40px 30px;
     overflow: hidden;
-    // width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: $font-stack1;
+    font-size: 18px;
+    // width: 100%; 
+
+    &:hover {
+        opacity: 0.7;
+        cursor: pointer;
+        
+    }
+
+    .imgContain {
+        // border: 0.5px solid lightgrey;
+        height: 350px;
+        width: 250px;
+        overflow: hidden;
+
+        .img {
+            // border: 1px solid lightgrey;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+        
+        img {
+            height: 350px;
+            width: 1;
+        }
+    }
+
+    .detailsContain {
+        // border: 2px solid orange;
+        margin: 15px 0;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 230px;
+
+        .name {
+            font-size: 23px;
+            font-weight: 500;
+            margin: 10px 0;
+            text-align: center;
+        }
+
+        // .price {
+
+        // }
+    }
 }
