--- a/src/containers/App/App.module.scss
+++ b/src/containers/App/App.module.scss
@@ -1,7 +1,7 @@
 .App {
-  border: 2px dashed red;
+  // border: 2px dashed red;
   height: 100%;
-  background-color: aliceblue;
+  background-color: white;
   display: flex;
   flex-direction: column;
   // position: relative;
